--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:h2:mem:schooldb
+spring.datasource.platform=h2
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
