--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:schooldb
+spring.datasource.url=jdbc:h2:mem:studentdb
 spring.datasource.platform=h2
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
